# algiz

./: .aliases.sh  .clang-tidy  .gitignore  .gitmodules  Makefile  README.md  TODO  algiz.json.example  meson.build  meson_options.txt
include/: ApplicationServer.h  Core.h  EventLoop.h  Log.h  Module.h  ModuleExtra.h  Options.h
include/error/: ParseError.h  UnsupportedMethod.h
include/http/: Client.h  Request.h  Response.h  Server.h
include/lib/: inja.hpp  nlohmann  wahtwo
include/net/: Certificates.h  GenericClient.h  NetError.h  ResolutionError.h  SSLServer.h  SSLSocket.h  Server.h  Socket.h  SocketBuffer.h
include/plugins/: Ansuz.h  Calculator.h  CountryFilter.h  Default404.h  Game3CI.h  HttpFileserv.h  LetsEncrypt.h  Logger.h  Plugin.h  PluginHost.h  Redirect.h  WSEcho.h
include/plugins/ansuz/: .gitignore
include/plugins/fileserv/: Fileserv.h  ModuleCache.h
include/plugins/probchess/: AIMatch.h  AIPlayer.h  Board.h  CCCP2Player.h  CCCPPlayer.h  Color.h  HumanMatch.h  HumanPlayer.h  Match.h  Move.h  NullMatch.h  Player.h  ProbabilityChess.h  RandomPlayer.h  Square.h
include/plugins/probchess/piece/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  all.h
include/threading/: Lockable.h  MTQueue.h  ThreadPool.h
include/util/: Base64.h  Braille.h  Defer.h  FS.h  GeoIP.h  MIME.h  SHA1.h  Shell.h  StringVector.h  Templates.h  Usage.h  Util.h  WeakCompare.h
res/ansuz/: edit_config.t  error.t  index.t  load.t  message.t  not_loaded.t  style.css  unloaded.t
src/: Core.cpp  EventLoop.cpp  Log.cpp  Options.cpp  Plugin.cpp  PluginHost.cpp  Util.cpp  grabber.sh  main.cpp  meson.build
src/http/: Client.cpp  Request.cpp  Response.cpp  Server.cpp
src/net/: GenericClient.cpp  SSLServer.cpp  SSLSocket.cpp  Server.cpp  Socket.cpp  SocketBuffer.cpp
src/plugins/: HttpFileserv.cpp  PluginHost.cpp  meson.build
src/plugins/ansuz/: Ansuz.cpp  gen.sh  meson.build  targets.mk
src/plugins/calculator/: Calculator.cpp  meson.build
src/plugins/countryfilter/: CountryFilter.cpp  meson.build
src/plugins/default404/: Default404.cpp  meson.build
src/plugins/fileserv/: Fileserv.cpp  FileservModules.cpp  FileservPreprocessor.cpp  ModuleCache.cpp  Preprocessor.cpp  meson.build
src/plugins/game3ci/: Game3CI.cpp  meson.build
src/plugins/httpfileserv/: HttpFileserv.cpp  meson.build
src/plugins/httpserv/: HttpFileserv.cpp
src/plugins/letsencrypt/: LetsEncrypt.cpp  meson.build
src/plugins/logger/: Logger.cpp  meson.build
src/plugins/probchess/: AIMatch.cpp  AIPlayer.cpp  Bishop.cpp  Board.cpp  CCCP2Player.cpp  CCCPPlayer.cpp  Color.cpp  HumanMatch.cpp  HumanPlayer.cpp  King.cpp  Knight.cpp  Match.cpp  Move.cpp  NullMatch.cpp  Pawn.cpp  Piece.cpp  ProbabilityChess.cpp  Queen.cpp  RandomPlayer.cpp  Rook.cpp  Square.cpp  meson.build
src/plugins/redirect/: Redirect.cpp  meson.build
src/plugins/wsecho/: WSEcho.cpp  meson.build
src/threading/: ThreadPool.cpp
src/util/: Base64.cpp  FS.cpp  GeoIP.cpp  MIME.cpp  SHA1.cpp  Shell.cpp  StringVector.cpp  Templates.cpp  Usage.cpp  Util.cpp
