probchess_plugin = shared_module('probchess_plugin', [
		'AIMatch.cpp',
		'AIPlayer.cpp',
		'Bishop.cpp',
		'Board.cpp',
		'CCCP2Player.cpp',
		'CCCPPlayer.cpp',
		'Color.cpp',
		'HumanMatch.cpp',
		'HumanPlayer.cpp',
		'King.cpp',
		'Knight.cpp',
		'Match.cpp',
		'Move.cpp',
		'NullMatch.cpp',
		'Pawn.cpp',
		'Piece.cpp',
		'ProbabilityChess.cpp',
		'Queen.cpp',
		'RandomPlayer.cpp',
		'Rook.cpp',
		'Square.cpp',
	],
	dependencies: algiz_deps,
	link_args: link_args,
	install: true,
	install_dir: 'plugin',
	include_directories: inc_dirs)
